--- a/trunk/android-app/app/src/main/res/layout/activity_social_login.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_social_login.xml
@@ -24,17 +24,36 @@
         android:layout_gravity="center"
         android:layout_marginRight="30dp"
         android:layout_marginLeft="30dp" />
+
     <com.google.android.gms.common.SignInButton
         android:id="@+id/google_signin_button"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
         android:layout_gravity="center"
         android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp">
+        android:layout_marginLeft="30dp"
+        android:visibility="visible"
+        tools:visibility="gone" />
+        <LinearLayout
+            android:id="@+id/sign_out_and_disconnect"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:visibility="gone"
+            tools:visibility="visible">
 
-
-    </com.google.android.gms.common.SignInButton>
+        <Button
+            android:id="@+id/sign_out_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Sign out"
+             />
+        </LinearLayout>
+        
 
 </LinearLayout>
