--- a/trunk/android-app/app/src/main/res/layout/dive_center_item.xml
+++ b/trunk/android-app/app/src/main/res/layout/dive_center_item.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     >
 
     <ImageView
@@ -67,11 +68,30 @@
         android:textColor="@color/black_text"
         android:text="+67 49 299 4825"/>
     <ImageView
+        android:id="@+id/dc_ic_mail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_mail"
+        android:layout_toRightOf="@+id/dc_avatar"
+        android:layout_below="@+id/dc_telefon"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"/>
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/dc_avatar"
-        android:layout_below="@+id/ic_phone"
+        android:layout_below="@+id/dc_ic_mail"
         android:src="@drawable/divider"
         android:layout_marginTop="10dp"/>
+    <android.support.v7.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="lashket@gmail.com"
+        android:textSize="18sp"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@+id/dc_ic_mail"
+        android:layout_below="@+id/dc_telefon"
+        android:layout_marginTop="4dp"
+        android:textColor="@color/black_text"/>
 
 </RelativeLayout>
