--- a/trunk/android-app/app/src/main/res/layout/dive_center_item.xml
+++ b/trunk/android-app/app/src/main/res/layout/dive_center_item.xml
@@ -87,7 +87,7 @@
     android:layout_marginTop="8dp"
     android:textColor="@color/black_text"/>
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/dc_avatar"
         android:layout_below="@+id/dc_ic_mail"
