--- a/trunk/android-app/app/src/main/res/layout/dive_center_list_fragment.xml
+++ b/trunk/android-app/app/src/main/res/layout/dive_center_list_fragment.xml
@@ -3,10 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:layout_marginLeft="5dp"
         android:id="@+id/dc_rc"
         />
 </LinearLayout>
