--- a/trunk/android-app/app/src/main/res/layout/activity_social_login.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_social_login.xml
@@ -1,4 +1,5 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,62 +7,20 @@
     android:background="@drawable/bg_photo"
     tools:context=".MainActivity">
 
-    <include layout="@layout/view_toolbar" />
+
 
     <ImageView
         android:id="@+id/picture"
-        android:src="@drawable/mask"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_width="200sp"
+        android:src="@drawable/login_logo"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="40dp"
+        android:layout_width="match_parent"
         android:layout_height="200sp"/>
-
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/facebook_login_button"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp" />
-
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/google_signin_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:layout_gravity="center"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:visibility="visible"
-        tools:visibility="gone" />
-        <LinearLayout
-            android:id="@+id/sign_out_and_disconnect"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:visibility="gone"
-            tools:visibility="visible">
-
-        <Button
-            android:id="@+id/sign_out_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Sign out"
-             />
-        </LinearLayout>
     <com.twitter.sdk.android.core.identity.TwitterLoginButton
         android:id="@+id/twitter_login_button"
-        android:layout_gravity="center"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_centerInParent="true"/>
 
-
-
-</LinearLayout>
+</RelativeLayout>
