--- a/trunk/android-app/app/src/main/res/layout/dive_center_list_fragment.xml
+++ b/trunk/android-app/app/src/main/res/layout/dive_center_list_fragment.xml
@@ -7,5 +7,6 @@
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:id="@+id/dc_rc"
+        android:scrollbars="vertical"
         />
 </LinearLayout>
