--- a/trunk/android-app/app/src/main/res/layout/info_window.xml
+++ b/trunk/android-app/app/src/main/res/layout/info_window.xml
@@ -4,14 +4,15 @@
     android:layout_height="wrap_content" >
     <ImageView
         android:id="@+id/popup_photo"
-        android:layout_height="120dp"
+        android:layout_height="195dp"
         android:layout_width="260dp"
-        android:src="@drawable/photo"/>
+        android:src="@drawable/photo"
+        android:background="@color/white"/>
     <TextView
         android:id="@+id/popup_product_name"
         android:layout_width="175dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="160dp"
         android:layout_marginLeft="10dp"
         android:textSize="22sp"
         android:textColor="@color/white"
