--- a/trunk/android-app/app/src/main/res/layout/activity_details.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_details.xml
@@ -21,8 +21,16 @@
                 android:layout_height="match_parent"
                 app:layout_collapseMode="parallax"
                 android:scaleType="centerCrop"
+                android:visibility="gone"
                 />
-
+            <ImageView
+                android:id="@+id/nonne_photos"
+                app:layout_collapseMode="parallax"
+                android:scaleType="centerCrop"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="visible"
+                android:src="@drawable/top_photo"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_collapse"
