--- a/trunk/android-app/app/src/main/res/layout/activity_social_login.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_social_login.xml
@@ -1,56 +1,62 @@
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_photo"
-
+    android:gravity="center"
     android:orientation="vertical">
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
-
-    >
-    <ImageView
-        android:layout_marginTop="100dp"
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:src="@drawable/login_logo"
-        android:id="@+id/login_logo"/>
-    <TextView
-        android:id="@+id/login_status"
-        android:visibility="gone"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textAlignment="center"
-        android:layout_marginTop="20dp" />
-
-    <com.facebook.login.widget.LoginButton
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/login_logo"
-        android:id="@+id/login_with_facebook"
+        android:layout_gravity="center">
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/facebook_login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
+            android:visibility="gone"/>
+        <com.twitter.sdk.android.core.identity.TwitterLoginButton
+        android:id="@+id/twitter_login_button"
         android:layout_width="300dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical" />
-
-    <com.google.android.gms.common.SignInButton
-        android:layout_marginTop="15dp"
-        android:id="@+id/login_with_google"
-        android:layout_width="300dp"
-        android:layout_below="@id/login_with_facebook"
-        android:layout_height="50dp" />
-
+        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+    <ImageView
+        android:id="@+id/dds_logo"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/login_logo"/>
     <Button
-        android:layout_marginTop="15dp"
-        android:id="@+id/login_with_twitter"
-        android:text="twitter"
-        android:layout_below="@+id/login_with_google"
-        android:layout_width="300dp"
-        android:layout_height="50dp" />
-</RelativeLayout>
-
-
-</RelativeLayout>
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/dds_logo"
+        android:id="@+id/fb_custom"
+        android:layout_width="wrap_content"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_height="65dp"
+        android:background="@drawable/btn_fb"/>
+    <Button
+        android:id="@+id/custom_google"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/fb_custom"
+        android:layout_width="wrap_content"
+        android:layout_height="65dp"
+        android:background="@drawable/btn_google"
+        style="?android:attr/borderlessButtonStyle"
+        />
+    <Button
+        android:id="@+id/twitter_custom"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/custom_google"
+        android:layout_width="wrap_content"
+        android:layout_height="65dp"
+        android:background="@drawable/btn_twitter"
+        style="?android:attr/borderlessButtonStyle"
+        />
+    </RelativeLayout>
+</FrameLayout>
