--- a/trunk/android-app/app/src/main/res/layout/dive_center_item.xml
+++ b/trunk/android-app/app/src/main/res/layout/dive_center_item.xml
@@ -77,6 +77,7 @@
         android:layout_toRightOf="@+id/dc_avatar"
         android:layout_below="@+id/dc_telefon"
         android:layout_marginLeft="10dp"
+        android:visibility="gone"
         android:layout_marginTop="12dp"/>
     <android.support.v7.widget.AppCompatTextView
     android:layout_width="wrap_content"
@@ -86,6 +87,7 @@
     android:layout_marginLeft="5dp"
     android:layout_toRightOf="@+id/dc_ic_mail"
     android:layout_below="@+id/dc_telefon"
+        android:visibility="gone"
     android:layout_marginTop="8dp"
     android:textColor="@color/black_text"/>
 
