--- a/trunk/ddscanner/app/src/main/res/drawable/rating_rectangle.xml
+++ b/trunk/ddscanner/app/src/main/res/drawable/rating_rectangle.xml
@@ -2,4 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="@color/tw__composer_red" />
+    <corners
+        android:radius="3dp" />
 </shape>
