--- a/trunk/ddscanner/app/src/main/res/layout/slider_image_fragment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/slider_image_fragment.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 --> <FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="350dp"
+    android:layout_height="400dp"
     android:layout_gravity="center"
     xmlns:android="http://schemas.android.com/apk/res/android" >
     <ImageView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/slider_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="350dp"
+        android:layout_height="400dp"
         android:layout_gravity="center" />
     <ProgressBar
         android:id="@+id/progressBar"
