--- a/trunk/ddscanner/app/src/main/res/layout/ds_info_window.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/ds_info_window.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="290dp"
+    android:layout_width="320dp"
     android:layout_height="wrap_content">
     <RelativeLayout
         android:id="@+id/top"
-        android:layout_width="290dp"
+        android:layout_width="320dp"
         android:layout_height="80dp"
         android:background="@drawable/only_top_image_border">
     <ImageView
@@ -34,18 +34,28 @@
         android:layout_height="20dp"
         android:gravity="center_vertical|center_horizontal"
         android:orientation="horizontal" />
+        <TextView
+            android:id="@+id/reviews"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_toRightOf="@+id/stars"
+            android:layout_below="@id/popup_product_name"
+            android:gravity="center"
+            android:layout_marginLeft="5dp"
+            android:text="reviews"/>
     <TextView
         android:id="@+id/description_popup"
         android:layout_below="@+id/stars"
         android:layout_toRightOf="@+id/popup_photo"
         android:lines="1"
         android:ellipsize="end"
-        android:layout_width="200dp"
+        android:layout_width="230dp"
         android:text="Very beautiful dive site for diving bla bla bla"
         android:textSize="14dp"
         android:layout_height="wrap_content"
         />
         <ImageView
+            android:layout_alignParentRight="true"
             android:layout_width="20dp"
             android:layout_height="10dp"
             android:layout_marginTop="35dp"
@@ -54,7 +64,7 @@
     </RelativeLayout>
     <ImageView
         android:layout_below="@+id/top"
-        android:layout_width="290dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:src="@drawable/triangle"/>
 </RelativeLayout>
