--- a/trunk/ddscanner/app/src/main/res/layout/fragment_notifications.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_notifications.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
+    <android.support.design.widget.TabLayout
+        android:id="@+id/notif_tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Notifications"/>
+        android:layout_height="45dp"
+        style="@style/tabLayout"
+        android:background="@color/white"
+        app:tabMode="fixed"/>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/notif_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
